...
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="Home" id="4Je-eT-jq2"/>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="IYf-yY-14H" userLabel="First Responder" sceneMemberID="firstResponder"/>
...
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="My Medications" id="VwU-58-JBo">
                        <barButtonItem key="rightBarButtonItem" title="Add" systemItem="add" id="8Bu-Ch-RTL">
                            <connections>
                                <segue destination="Luw-Pi-tza" kind="presentation" identifier="addMedSegue" id="Zkn-WJ-sFl"/>
...
                                                <nil key="highlightedColor"/>
                                            </label>
                                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" enabled="NO" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="John" textAlignment="natural" clearsOnBeginEditing="YES" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="6Dg-6Z-ArN">
                                                <rect key="frame" x="119.33333333333336" y="0.0" width="224.66666666666663" height="61"/>
                                                <fontDescription key="fontDescription" type="italicSystem" pointSize="18"/>
...
                                                <nil key="highlightedColor"/>
                                            </label>
                                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" enabled="NO" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Doe" textAlignment="natural" clearsOnBeginEditing="YES" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="tsM-7R-ZJk">
                                                <rect key="frame" x="93" y="0.0" width="251" height="61.333333333333343"/>
                                                <fontDescription key="fontDescription" type="italicSystem" pointSize="18"/>
...
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="My Details" id="Ctb-Xt-Vdi">
                        <barButtonItem key="rightBarButtonItem" title="Edit" id="hW0-SP-dfI">
                            <connections>
                                <segue destination="CNu-5A-koB" kind="presentation" identifier="editDetailsSegue" modalTransitionStyle="crossDissolve" id="4bA-5N-D2s"/>
...
                                                <rect key="frame" x="310" y="0.0" width="34" height="60.666666666666671"/>
                                                <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="15"/>
                                                <state key="normal" title="Save">
                                                    <color key="titleColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                </state>
...
                                                </constraints>
                                                <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="15"/>
                                                <state key="normal" title="Done">
                                                    <color key="titleColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                </state>
...
                                                    <constraint firstAttribute="height" constant="30" id="t1c-Hb-YES"/>
                                                </constraints>
                                                <state key="normal" title="Add New Time">
                                                    <color key="titleColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                </state>
...
